# mafia-mobile

./: .env.example  .gitignore  API_CONTRACT.md  LICENSE  README.md  compose.yml  kitty-run.sh  package-lock.json  requirements.txt
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  ty.toml
backend/app/: main.py
backend/app/api/v1/: dependencies.py
backend/app/application/: dependencies.py
backend/app/application/commands/: lobby_create_command.py  lobby_join_command.py  lobby_leave_command.py  user_create_command.py
backend/app/application/dependenices/: alias.py
backend/app/application/queries/: user_auth_query.py
backend/app/application/services/: game_manager_service.py  game_service.py  jwt_service.py  lobby_service.py  notification_service.py  room_websocket_service.py  security_service.py  user_service.py
backend/app/application/ws_message_handlers/: game_websocket_handler.py  game_ws_message_handler.py  lobby_websocket_handler.py  lobby_ws_message_handler.py
backend/app/core/services/: dependencies.py  game_service.py  lobby_service.py  notification_service.py  room_websocket_service.py
backend/app/domain/: enums.py  exceptions.py
backend/app/domain/entities/: avatar.py  game.py  lobby.py  player.py  user.py
backend/app/domain/services/: game_service.py  lobby_service.py  role_distribution_service.py  vote_conductor_service.py
backend/app/infrastructure/: dependencies.py  environment.py  factories.py
backend/src/: main.py
backend/src/domain/: enums.py  exceptions.py
backend/tests/: test_api.py
(+370 files in other folders)
